[FIX] web: formView mobile gaps
Prior to this commit, there was undesired vertical gap between fields in
the formView (mobile only).

task-3806250

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -934,6 +934,7 @@
 
             .o_inner_group {
                 margin-bottom: 0 !important;
+                gap: 0;
 
                 div[name="carrier_selection"] {
                     > div:not(.alert) {
@@ -1119,6 +1120,13 @@
 .o_form_view.o_xxs_form_view {
     .o_inner_group {
         @include form-break-table;
+        .o_wrap_field {
+            .o_cell {
+                .o_field_widget {
+                    margin-bottom: 0;
+                }
+            }
+        }
     }
 }
 
